--- a/client/package.json
+++ b/client/package.json
@@ -6,17 +6,19 @@
     "@chakra-ui/react": "^1.7.2",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
-    "@fontsource/allerta-stencil": "^4.5.0",
-    "@fontsource/bellefair": "^4.5.0",
-    "@fontsource/fira-mono": "^4.5.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^25.2.3",
+    "@types/node": "^12.20.37",
+    "@types/react": "^16.14.21",
+    "@types/react-dom": "^16.9.14",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^3.11.0",
     "react-scripts": "4.0.3",
+    "typescript": "^4.5.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
