--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["Chakra", "fontsource", "selfhost"]
+  "cSpell.words": ["Chakra", "fontsource", "Leewardslope", "selfhost"]
 }
