chore: auth pages

--- a/client/.vscode/settings.json
+++ b/client/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["Chakra", "fontsource", "Leewardslope", "selfhost"]
+  "cSpell.words": [
+    "Chakra",
+    "fontsource",
+    "Leewardslope",
+    "selfhost",
+    "Signin",
+    "Signup"
+  ]
 }
