--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^10.4.9",
     "@testing-library/user-event": "^12.8.3",
+    "@types/firebase": "^3.2.1",
     "@types/jest": "^25.2.3",
     "@types/node": "^12.20.37",
     "@types/react": "^16.14.21",
     "@types/react-dom": "^16.9.14",
+    "firebase": "^9.5.0",
     "framer-motion": "^4.1.17",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
